--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "cors": "^2.8.5",
-    "express-fileupload": "^1.4.3"
+    "express-fileupload": "^1.4.3",
+    "mongodb": "^6.3.0",
+    "nodemon": "^3.0.2"
   }
 }
